# components-code-sample-hub

./: .gitignore  README.md
jupyter/pdftools_sdk/: pdftools_sdk_add_appearance_signature_field.ipynb  pdftools_sdk_add_signature_field.ipynb  pdftools_sdk_built_in_add_timestamp.ipynb  pdftools_sdk_built_in_certify.ipynb  pdftools_sdk_built_in_sign.ipynb  pdftools_sdk_chat_with_pdf.ipynb  pdftools_sdk_decrypt.ipynb  pdftools_sdk_encrypt.ipynb  pdftools_sdk_extract_text_layout.ipynb  (+20 more)
tools-sdk/PdfTools_Encrypt/c/: CMakeLists.txt  pdftoolsencrypt.c  pdftoolsencrypt.vcxproj  pdftoolsencrypt.vcxproj.filters
tools-sdk/PdfTools_Encrypt/c/include/: PdfTools.h  PdfTools_PdfTools.h  PdfTools_PdfToolsCryptoProviders.h  PdfTools_PdfToolsCryptoProvidersBuiltIn.h  PdfTools_PdfToolsCryptoProvidersGlobalSignDss.h  PdfTools_PdfToolsCryptoProvidersPkcs11.h  PdfTools_PdfToolsCryptoProvidersSwisscomSigSrv.h  PdfTools_PdfToolsDocumentAssembly.h  PdfTools_PdfToolsGeomUnits.h  PdfTools_PdfToolsImage.h  PdfTools_PdfToolsImage2Pdf.h  PdfTools_PdfToolsImage2PdfProfiles.h  PdfTools_PdfToolsOptimization.h  PdfTools_PdfToolsOptimizationProfiles.h  PdfTools_PdfToolsPdf.h  PdfTools_PdfToolsPdf2Image.h  PdfTools_PdfToolsPdf2ImageProfiles.h  PdfTools_PdfToolsPdfAConversion.h  PdfTools_PdfToolsPdfAValidation.h  PdfTools_PdfToolsSign.h  PdfTools_PdfToolsSignatureValidation.h  PdfTools_PdfToolsSignatureValidationProfiles.h  PdfTools_PdfToolsSys.h  PdfTools_Platform.h  PdfTools_Types.h
tools-sdk/PdfTools_Encrypt/c/lib/win-x64/: PdfToolsSdk.lib
tools-sdk/PdfTools_Encrypt/c/lib/win-x86/: PdfToolsSdk.lib
(+314 files in other folders)
